bynkc/tests/fixtures/negative/249_streaming_wrong_arity/input.bynk
commons c {
  -- `Streaming` requires its `Stream[String]` body argument.
  fn bad() -> HttpResult[()] {
    Streaming
  }
}
